--- a/4-frontend/style.css
+++ b/4-frontend/style.css
@@ -1,7 +1,6 @@
 
 .container{
     display: flex;
-    overflow: hidden;
     height: 100vh;
 }
 .menu{
@@ -59,7 +58,7 @@
 .content-wrap{
     display: flex;
     flex-direction: column;
-    flex: 1;
+    flex:1;
 }
 .search{
     display: flex;
@@ -139,6 +138,7 @@
 .cards{
     display: flex;
     background-color: #f2f2f2;
+    flex:auto;
     overflow: auto;
     flex-wrap: wrap;
     justify-content: space-evenly;
